--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "stainless_minecraft"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = "0.11.7"
+anyhow = "1.0.51"
+reqwest = { version = "0.11.7", features = ["json"] }
+serde = { version = "1.0.130", features = ["derive"] }
+tokio = { version = "1.14.0", features = ["full"] }
