--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.51"
+emoji = "0.2.1"
 hex = "0.4.3"
+indicatif = "0.17.0-beta.1"
 reqwest = { version = "0.11.7", features = ["json"] }
 serde = { version = "1.0.130", features = ["derive"] }
 sha2 = "0.10.0"
