Now reading from a config file properly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.51"
 async-trait = "0.1.52"
 bincode = "1.3.3"
+config = "0.11.0"
 emoji = "0.2.1"
 hex = "0.4.3"
 indicatif = "0.17.0-beta.1"
