--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ indicatif = "0.17.0-beta.1"
 reqwest = { version = "0.11.7", features = ["json"] }
 serde = { version = "1.0.131", features = ["derive"] }
 sha2 = "0.10.0"
-tokio = { version = "1.14.0", features = ["full"] }
+tempfile = "3.2.0"
+tokio = { version = "1.15.0", features = ["full"] }
