Updated to the latest versions of dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,15 @@ Cargo.lock
 
 # Ignoring run/ so that the server can be downloaded somewhere for testing
 run/
+
+### VisualStudioCode template
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
