--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ indicatif = "0.17.0-rc.5"
 reqwest = { version = "0.11.9", features = ["json"] }
 serde = { version = "1.0.136", features = ["derive", "std"] }
 sha2 = "0.10.2"
+#tempfile = "3.3.0"
 tokio = { version = "1.17.0", features = ["full"] }
