--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,5 +1,13 @@
 {
     "version": "2.0.0",
+    "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": true,
+        "panel": "new",
+        "showReuseMessage": true,
+        "clear": true
+    },
     "tasks": [
         {
             "label": "stainless: run iron",
