Modified some basic project settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,8 @@
         "**/.settings": true,
         "**/.factorypath": true,
         "**/.history": true
-    }
+    },
+    "rust-analyzer.checkOnSave.command": "clippy",
+    "rust-analyzer.inlayHints.maxLength": 10,
+    "rust-analyzer.joinLines.joinAssignments": false
 }
