Removed files not supposed to be in the commit

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
             "type": "cppvsdbg",
             "request": "launch",
             "name": "Debug Iron",
-            "program": "${workspaceFolder}/iron/target/debug/iron.exe",
+            "program": "${workspaceFolder}/target/debug/iron.exe",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/iron/run",
+            "cwd": "${workspaceFolder}/run/iron",
             "environment": [],
             "console": "integratedTerminal",
             "preLaunchTask": "stainless: build iron"
@@ -20,10 +20,10 @@
             "type": "cppvsdbg",
             "request": "launch",
             "name": "Debug Nickel",
-            "program": "${workspaceFolder}/nickel/target/debug/nickel.exe",
+            "program": "${workspaceFolder}/target/debug/nickel.exe",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/nickel/run",
+            "cwd": "${workspaceFolder}/run/nickel",
             "environment": [],
             "console": "integratedTerminal",
             "preLaunchTask": "stainless: build nickel"
