--- a/packages/iron/Cargo.toml
+++ b/packages/iron/Cargo.toml
@@ -10,7 +10,7 @@ actix = "0.13.0"
 actix-cors = "0.6.1"
 actix-web = "4.0.1"
 anyhow = "1.0.57"
-diesel = "1.4.8"
+diesel = "2.0.0-rc.0"
 juniper = "0.15.9"
 juniper_actix = "0.4.0"
 tokio = "1.17.0"
