Major refactorings for iron

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,11 @@
         "graphiql",
         "indicatif",
         "papermc",
-        "reqwest"
+        "pemfile",
+        "pkcs",
+        "reqwest",
+        "rustls",
+        "thiserror"
     ],
     "explorerExclude.backup": {},
     "files.exclude": {
