--- a/packages/iron/Cargo.toml
+++ b/packages/iron/Cargo.toml
@@ -8,11 +8,15 @@ edition = "2021"
 [dependencies]
 actix = "0.13.0"
 actix-cors = "0.6.1"
-actix-web = "4.0.1"
+actix-web = { version = "4.0.1", features = ["rustls"] }
 anyhow = "1.0.57"
 diesel = "2.0.0-rc.0"
 juniper = "0.15.9"
 juniper_actix = "0.4.0"
-tokio = "1.17.0"
+rustls = "0.20.4"
+rustls-pemfile = "1.0.0"
+thiserror = "1.0.31"
+tokio = "1.18.1"
 tracing = "0.1.34"
 tracing-actix-web = "0.5.1"
+velcro = "0.5.3"
