Saving changes to add an initial config schema for GraphQL

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "alphanum",
         "graphiql",
         "indicatif",
+        "minecraft",
         "papermc",
         "pemfile",
         "pkcs",
