Saving changes towards making Diesel work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "alphanum",
         "graphiql",
         "indicatif",
+        "Insertable",
         "minecraft",
         "papermc",
         "pemfile",
