--- a/packages/iron/Cargo.toml
+++ b/packages/iron/Cargo.toml
@@ -10,13 +10,14 @@ actix = "0.13.0"
 actix-cors = "0.6.1"
 actix-web = { version = "4.0.1", features = ["rustls"] }
 anyhow = "1.0.57"
-diesel = "2.0.0-rc.0"
+diesel = { version = "2.0.0-rc.0", features = ["sqlite", "r2d2"] }
 juniper = "0.15.9"
 juniper_actix = "0.4.0"
+r2d2 = "0.8.9"
 rustls = "0.20.6"
 rustls-pemfile = "1.0.0"
 thiserror = "1.0.31"
-tokio = "1.18.2"
+tokio = "1.19.1"
 tracing = "0.1.34"
 tracing-actix-web = "0.5.1"
 velcro = "0.5.3"
