--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,6 @@
         "**/.factorypath": true,
         "**/.history": true
     },
-    "rust-analyzer.checkOnSave.command": "clippy"
+    "rust-analyzer.checkOnSave": true,
+    "rust-analyzer.check.command": "clippy"
 }
