--- a/packages/iron/Cargo.toml
+++ b/packages/iron/Cargo.toml
@@ -11,6 +11,7 @@ actix-cors = "0.6.4"
 actix-web = { version = "4.3.1", features = ["rustls"] }
 anyhow = "1.0.71"
 diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
+env_logger = "0.10.0"
 juniper = "0.15.11"
 juniper_actix = "0.4.0"
 r2d2 = "0.8.10"
