--- a/packages/iron/Cargo.toml
+++ b/packages/iron/Cargo.toml
@@ -6,20 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix = "0.13.0"
-actix-cors = "0.6.4"
-actix-web = { version = "4.3.1", features = ["rustls"] }
 anyhow = "1.0.71"
-diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
+axum = { version = "0.6.18", features = ["macros", "tracing"] }
+axum-server = { version = "0.5.1", features = ["tls-rustls"] }
+diesel = { version = "2.0.4", features = ["sqlite", "r2d2"] }
 env_logger = "0.10.0"
+hyper = { version = "0.14.26", features = ["full"] }
 juniper = "0.15.11"
-juniper_actix = "0.4.0"
+juniper_hyper = "0.8.0"
 r2d2 = "0.8.10"
-# Must be 0.20.X until Actix supports newer
-rustls = "0.20.8"
+rustls = "0.21.1"
 rustls-pemfile = "1.0.2"
 thiserror = "1.0.40"
-tokio = "1.28.2"
+tokio = { version = "1.28.1", features = ["full"] }
+tower = "0.4.13"
 tracing = "0.1.37"
-tracing-actix-web = "0.7.5"
 velcro = "0.5.4"
