--- a/packages/iron/Cargo.toml
+++ b/packages/iron/Cargo.toml
@@ -9,16 +9,16 @@ edition = "2021"
 anyhow = "1.0.71"
 axum = { version = "0.6.18", features = ["macros", "tracing"] }
 axum-server = { version = "0.5.1", features = ["tls-rustls"] }
-diesel = { version = "2.0.4", features = ["sqlite", "r2d2"] }
+diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
 env_logger = "0.10.0"
 hyper = { version = "0.14.26", features = ["full"] }
-juniper = "0.15.11"
-juniper_hyper = "0.8.0"
+async-graphql = { version = "5.0.9", features = ["tracing"] }
+async-graphql-axum = "5.0.9"
 r2d2 = "0.8.10"
 rustls = "0.21.1"
 rustls-pemfile = "1.0.2"
 thiserror = "1.0.40"
-tokio = { version = "1.28.1", features = ["full"] }
+tokio = { version = "1.28.2", features = ["full"] }
 tower = "0.4.13"
 tracing = "0.1.37"
 velcro = "0.5.4"
