Improved SeaORM migration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "actix",
         "alphanum",
         "graphiql",
+        "Iden",
         "indicatif",
         "Insertable",
         "minecraft",
