Now using sea ORM successfully

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "actix",
         "alphanum",
+        "codegen",
         "graphiql",
         "Iden",
         "indicatif",
