--- a/packages/iron/Cargo.toml
+++ b/packages/iron/Cargo.toml
@@ -9,14 +9,13 @@ edition = "2021"
 anyhow = "1.0.71"
 axum = { version = "0.6.18", features = ["macros", "tracing"] }
 axum-server = { version = "0.5.1", features = ["tls-rustls"] }
-diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
 env_logger = "0.10.0"
 hyper = { version = "0.14.26", features = ["full"] }
 async-graphql = { version = "5.0.9", features = ["tracing"] }
 async-graphql-axum = "5.0.9"
-r2d2 = "0.8.10"
 rustls = "0.21.1"
 rustls-pemfile = "1.0.2"
+sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print" ] }
 thiserror = "1.0.40"
 tokio = { version = "1.28.2", features = ["full"] }
 tower = "0.4.13"
