--- a/packages/iron/Cargo.toml
+++ b/packages/iron/Cargo.toml
@@ -15,9 +15,10 @@ async-graphql = { version = "5.0.10", features = ["tracing"] }
 async-graphql-axum = "5.0.10"
 rustls = "0.21.1"
 rustls-pemfile = "1.0.2"
-sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print" ] }
+sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print", "with-uuid", "with-chrono" ] }
 thiserror = "1.0.40"
 tokio = { version = "1.28.2", features = ["full"] }
 tower = "0.4.13"
 tracing = "0.1.37"
 velcro = "0.5.4"
+uuid = "1.3.4"
