Reorganized the code a bit to make more sense

--- a/packages/iron/Cargo.toml
+++ b/packages/iron/Cargo.toml
@@ -11,7 +11,7 @@ axum = { version = "0.6.18", features = ["macros", "tracing"] }
 axum-server = { version = "0.5.1", features = ["tls-rustls"] }
 env_logger = "0.10.0"
 hyper = { version = "0.14.26", features = ["full"] }
-async-graphql = { version = "5.0.10", features = ["tracing"] }
+async-graphql = { version = "5.0.10", features = ["tracing", "uuid"] }
 async-graphql-axum = "5.0.10"
 rustls = "0.21.2"
 rustls-pemfile = "1.0.2"
