--- a/packages/iron/Cargo.toml
+++ b/packages/iron/Cargo.toml
@@ -6,19 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.72"
-axum = { version = "0.6.19", features = ["macros", "tracing"] }
+anyhow = "1.0.75"
+async-graphql = { version = "6.0.4", features = ["tracing", "uuid"] }
+async-graphql-axum = "6.0.4"
+axum = { version = "0.6.20", features = ["macros", "tracing"] }
 axum-server = { version = "0.5.1", features = ["tls-rustls"] }
+entity = { path = "../database/entity" }
 env_logger = "0.10.0"
 hyper = { version = "0.14.27", features = ["full"] }
-async-graphql = { version = "5.0.10", features = ["tracing", "uuid"] }
-async-graphql-axum = "5.0.10"
+migration = { path = "../database/migration" }
 rustls = "0.21.6"
 rustls-pemfile = "1.0.3"
-sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print", "with-uuid", "with-chrono" ] }
-thiserror = "1.0.44"
-tokio = { version = "1.29.1", features = ["full"] }
+sea-orm = { version = "^0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print", "with-uuid", "with-chrono"] }
+tokio = { version = "1.32.0", features = ["full"] }
 tower = "0.4.13"
 tracing = "0.1.37"
-velcro = "0.5.4"
 uuid = "1.4.1"
+velcro = "0.5.4"
