--- a/packages/iron/Cargo.toml
+++ b/packages/iron/Cargo.toml
@@ -13,13 +13,12 @@ axum = { version = "0.6.20", features = ["macros", "tracing"] }
 axum-server = { version = "0.5.1", features = ["tls-rustls"] }
 entity = { path = "../database/entity" }
 env_logger = "0.10.0"
-hyper = { version = "0.14.27", features = ["full"] }
-migration = { path = "../database/migration" }
 rustls = "0.21.6"
 rustls-pemfile = "1.0.3"
 sea-orm = { version = "^0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print", "with-uuid", "with-chrono"] }
 tokio = { version = "1.32.0", features = ["full"] }
 tower = "0.4.13"
+tower-http = { version = "0.4.3", features = ["full"] }
 tracing = "0.1.37"
 uuid = "1.4.1"
 velcro = "0.5.4"
