Replaced with a grpc service

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "packages/database/migration",
     "packages/database/entity",
-    "packages/iron",
+    "packages/iron/api",
+    "packages/iron/server",
     "packages/nickel"
 ]
