--- a/packages/iron/server/Cargo.toml
+++ b/packages/iron/server/Cargo.toml
@@ -15,5 +15,5 @@ tonic = { version = "0.9", features = ["tls"] }
 tower = { version = "0.4", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-uuid = "1.4"
+uuid = { version = "1.4", features = ["v4"] }
 velcro = "0.5"
