--- a/packages/iron/server/Cargo.toml
+++ b/packages/iron/server/Cargo.toml
@@ -8,15 +8,16 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 async-trait = "0.1"
+console-subscriber = "0.1.10"
 entity = { path = "../../database/entity" }
 http = "0.2"
 iron_api = { path = "../api" }
 prost = "0.12"
 sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print", "with-uuid", "with-chrono"] }
-tokio = { version = "1.32", features = ["full"] }
+tokio = { version = "1.32", features = ["full", "tracing"] }
 tonic = { version = "0.10", features = ["tls"] }
 tower = { version = "0.4", features = ["full"] }
 tracing = "0.1"
-tracing-subscriber = "0.3"
+#tracing-subscriber = "0.3" NOTE: This this is to be commented out until it is needed to implement telemetry
 uuid = { version = "1.4", features = ["v4"] }
 velcro = "0.5"
