--- a/packages/iron/server/Cargo.toml
+++ b/packages/iron/server/Cargo.toml
@@ -18,6 +18,6 @@ tokio = { version = "1.32", features = ["full", "tracing"] }
 tonic = { version = "0.10", features = ["tls"] }
 tower = { version = "0.4", features = ["full"] }
 tracing = "0.1"
-#tracing-subscriber = "0.3" NOTE: This this is to be commented out until it is needed to implement telemetry
+tracing-subscriber = "0.3"
 uuid = { version = "1.4", features = ["v4"] }
 velcro = "0.5"
