--- a/packages/iron/server/Cargo.toml
+++ b/packages/iron/server/Cargo.toml
@@ -18,6 +18,6 @@ tokio = { version = "1.32", features = ["full", "tracing"] }
 tonic = { version = "0.10", features = ["tls"] }
 tower = { version = "0.4", features = ["full"] }
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 uuid = { version = "1.4", features = ["v4"] }
 velcro = "0.5"
